deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katana-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katana
  template:
    metadata:
      labels:
        app: katana
    spec:
      containers:
      - name: web
        image: ghcr.io/Adilaputri-2003/katana:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
